--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dotenv-flow": "^3.1.0",
     "express": "^4.17.1",
