--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.8.7",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.0",
+    "socket.io": "^2.3.0",
     "ts-mongoose": "0.0.21",
     "typedi": "^0.8.0"
   }
